# nugit

./: .gitattributes  LICENSE  MANIFEST.in  README.md  nugit.yaml  pre-commit  pre-py.yaml  pyproject.toml  setup.py
.github/workflows/: flake8-lint.yaml
src/: __init__.py  actions.py  argsparser.py  constants.py
src/defaults/: pre-commit
src/entrypoints/: __init__.py
src/nugit/: DESC.md  __init__.py  actions.py  argsparser.py  constants.py  exeptions.py  jobs.py
src/nugit/defaults/: nugit.yaml  pre-commit
src/nugit/entrypoints/: __init__.py
src/nugit/templates/: base  cfg.yaml
src/prepy/: __init__.py  actions.py  argsparser.py  constants.py
src/prepy/defaults/: pre-commit  prepy.yaml
src/prepy/entrypoints/: __init__.py
